--- a/SparkleShare/Mac/SparkleShare.Mac.csproj
+++ b/SparkleShare/Mac/SparkleShare.Mac.csproj
@@ -318,6 +318,14 @@
     <BundleResource Include="..\Linux\Images\icons\hicolor\12x12\status\document-moved.png">
       <Link>Resources\document-moved.png</Link>
     </BundleResource>
+    <BundleResource Include="..\Common\Presets\harvest.png">
+      <Link>Presets\harvest.png</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </BundleResource>
+    <BundleResource Include="..\Common\Presets\harvest.xml">
+      <Link>Presets\harvest.xml</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </BundleResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
